--- a/BankApp.MvcUI/Views/Transfer/Virman.cshtml
+++ b/BankApp.MvcUI/Views/Transfer/Virman.cshtml
@@ -23,12 +23,13 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(model => model.hesapId, "", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
+                        <div class="col-md-10">
 
-                            @Html.DropDownList("Gonderen", ViewBag.gonderen as SelectList, "---Hesap Seçiniz---")
+                            @Html.DropDownList("Gonderen", ViewBag.gonderen as SelectList, "Hesap Seçiniz", new { @class = "form-control" })
+                       
 
 
-                            @*@Html.DropDownList("gonderen", null, htmlAttributes: new { @class = "form-control" })*@
+                          
 
                             @Html.ValidationMessageFor(model => model.hesapId, "", new { @class = "text-danger" })
                         </div>
@@ -38,8 +39,8 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(model => model.hesapId, "", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
-                            @Html.DropDownList("Alici", Enumerable.Empty<SelectListItem>(), "---Hesap Seçiniz---")
+                        <div class="col-md-10">
+                            @Html.DropDownList("Alici", Enumerable.Empty<SelectListItem>(), "Hesap Seçiniz", new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.hesapId, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -53,7 +54,7 @@
                         </div>
                     </div>
                 </td>
-                <td><input type="submit" class="btn btn-warning" id="virmangonder" value="Gönder" /></td>
+                <td><div class="form-group"><input type="submit" class="btn btn-success btn-sm hec-save waves-effect" id="virmangonder" value="Gönder" /></div></td>
             </tr>
 
         </tbody>
