--- a/BankApp.MvcUI/Views/hesap/ParaCek.cshtml
+++ b/BankApp.MvcUI/Views/hesap/ParaCek.cshtml
@@ -21,9 +21,9 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(model => model.hesapId, "", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
+                        <div class="col-md-7">
 
-                            @Html.DropDownList("cekilecekHesap", ViewBag.cekilecekHesap as SelectList, "---Hesap Seçiniz---")
+                            @Html.DropDownList("cekilecekHesap", ViewBag.cekilecekHesap as SelectList, "Hesap Seçiniz", new { @class = "form-control" })
 
 
                             @*@Html.DropDownList("gonderen", null, htmlAttributes: new { @class = "form-control" })*@
