--- a/BankApp.MvcUI/Views/hesap/ParaYukle.cshtml
+++ b/BankApp.MvcUI/Views/hesap/ParaYukle.cshtml
@@ -21,9 +21,9 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(model => model.hesapId, "", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-5">
+                        <div class="col-md-12">
 
-                            @Html.DropDownList("yuklenicekHesap", ViewBag.yuklenicekHesap as SelectList, "---Hesap Seçiniz---")
+                            @Html.DropDownList("yuklenicekHesap", ViewBag.yuklenicekHesap as SelectList, "Hesap Seçiniz", new { @class = "form-control" })
 
 
                             @*@Html.DropDownList("gonderen", null, htmlAttributes: new { @class = "form-control" })*@
@@ -35,7 +35,7 @@
                 <td>
                     <div class="form-group">
                         @Html.LabelFor(model => model.bakiye, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
+                        <div class="col-md-7">
                             @Html.EditorFor(model => model.bakiye, new { htmlAttributes = new { @class = "form-control sayi" } })
                             @Html.ValidationMessageFor(model => model.bakiye, "", new { @class = "text-danger" })
                         </div>
